fix overlapping next and prev buttons

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,6 +1,6 @@
 #svgContainer {
     display: block;
-    margin; auto;
+    margin: auto;
     position: absolute;
     overflow-x: auto;
     overflow-y: hidden;
@@ -10,7 +10,7 @@
 
 #labelContainer {
     display: block;
-    margin; auto;
+    margin: auto;
     position: fixed;
     overflow-y: auto;
     overflow-x: hidden;
@@ -81,7 +81,6 @@ h1 {
     top:10px;
 }
 
-
 h2 {
     top:50px;
 }
@@ -89,24 +88,23 @@ h2 {
 button#fullViewId { 
     position: fixed; 
     bottom: 0px; 
-    right: 0px; 
+    left: 20vw; 
     height: 50px;
+    width: 60%;
 }
-
 
 button#nextViewButton { 
-    display: inline-block;
     position: fixed; 
-    bottom: 100px; 
+    bottom: 0px; 
     right: 0px; 
     height: 50px;
-    width: 100px;
+    width: 15%;
 }
+
 button#previousViewButton { 
-    display:inline-block;
     position: fixed; 
-    bottom: 100px; 
+    bottom: 0px; 
     left: 0px; 
     height: 50px;
-    width: 100px;
+    width: 15%;
 }
